--- a/src/app/modales/modal-habilidad/modal-habilidad.component.html
+++ b/src/app/modales/modal-habilidad/modal-habilidad.component.html
@@ -7,26 +7,54 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body p-5 pt-0">
-                <form class="row g-3">
-                    <!-- <div class="col-12">
+                <form [formGroup]="form" (ngSubmit)="onEnviar($event)" class="row g-3">
+                    <div class="col-12">
                         <label for="inputTecnologia" class="form-label">Tecnología</label>
-                        <input type="text" class="form-control" id="inputTecnologia" placeholder="Nombre de Tecnología" required>
-                    </div> -->
+                        <input type="text" formControlName="tecnologia" class="form-control" id="inputTecnologia" placeholder="Nombre de Tecnología" required>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Tecnologia?.errors && Tecnologia?.touched">    
+                        <p *ngIf="Tecnologia?.hasError('required')" class="error">
+                            El Nombre de la Tecnología es requerido.
+                        </p>
+                    </div>
                     <div class="col-12">
                         <label for="inputUrl" class="form-label">URL Imágen</label>
-                        <input type="url" class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <input type="url" formControlName="urlImgTec" class="form-control" id="inputUrl" placeholder="http://..." required>
                     </div>
-                    <div class="col-md-3">
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="UrlImgTecnologia?.errors && UrlImgTecnologia?.touched">    
+                        <p *ngIf="UrlImgTecnologia?.hasError('required')" class="error">
+                            El camino de la imágen de la Tecnología es requerido.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
                         <label for="inputPorcentaje" class="form-label">Porcentaje</label>
-                        <input type="number" class="form-control" id="inputPorcentaje" placeholder="Ingrese un valor menor a 100" required>
+                        <input type="number" formControlName="porcentaje" lass="form-control" id="inputPorcentaje" placeholder="Ingrese un valor menor a 100" min="0" max="100" required>
+                    </div>
+                    <div *ngIf="Porcentaje?.errors && Porcentaje?.touched">    
+                        <p *ngIf="Porcentaje?.hasError('required')" class="error">
+                            El valor del Porcentaje es requerido.
+                        </p>
+                        <p *ngIf="Porcentaje?.hasError('min')" class="error">
+                            El porcentaje debe estar entre 0 y 100
+                        </p>
+                        <p *ngIf="Porcentaje?.hasError('max')" class="error">
+                            El porcentaje debe estar entre 0 y 100
+                        </p>
                     </div>
                     <div class="col-md-9">
                         <label for="inputDescripcionNivel" class="form-label">Descripción del Nivel</label>
-                        <input type="text" class="form-control" id="inputDescripcionNivel" placeholder="Principiante, Intermedio, Avanzado, etc." required>
+                        <input type="text" formControlName="descripcion" class="form-control" id="inputDescripcionNivel" placeholder="Principiante, Intermedio, Avanzado, etc." required>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Descripcion?.errors && Descripcion?.touched">    
+                        <p *ngIf="Descripcion?.hasError('required')" class="error">
+                            La descripción es requerida.
+                        </p>
                     </div>
                     <div class="col-md-12 d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Grabar</button>
-                        <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Cancelar</button>
                     </div>
                 </form>
             </div>
