--- a/src/app/componentes/acercade/acercade.component.html
+++ b/src/app/componentes/acercade/acercade.component.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-                <img src="../assets/img/fotoPerfil.jpg" alt="Foto Perfil" class="circulo img-fluid">
+                <img [src]="imgPerfil" alt="Foto Perfil" class="circulo img-fluid">
             </div>
             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 mt-3 pt-2">
-                <h4>Richard Díaz Flores</h4>
-                <h5 class="center">Desarrollador Fullstack Jr.</h5>
+                <h4>{{nombre}}</h4>
+                <h5 class="center">{{titulo}}</h5>
                 <hr>
-                <span class="borde">Me gusta la programación y hoy en día debido a la evolución de nuevas tecnologías, es imprescindible continuar con el avance de las mismas, para eso uno también tiene que evolucionar, aprendiendo y actualizandose en dichas habilidades, ya que es preciso para poder alcanzar nuevas metas no tan solo a nivel personal sino también profesional.
+                <span class="borde">{{descripcion}}
                 </span>
             </div>
             <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 mt-4 pt-2 pt-2">
