--- a/src/app/modales/modal-acercade/modal-acercade.component.html
+++ b/src/app/modales/modal-acercade/modal-acercade.component.html
@@ -7,27 +7,50 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body p-5 pt-0">
-                <form class="row g-3">
+                <form [formGroup]="form" (ngSubmit)="onEnviar($event)" class="row g-3">
                     <div class="col-12">
-                        <label for="inputInstitucion" class="form-label">Nombre y Apellido</label>
-                        <input type="text" class="form-control" id="inputInstitucion" placeholder="Nombre y Apellido" required>
+                        <label for="inpuNombre" class="form-label">Nombre y Apellido</label>
+                        <input type="text" formControlName="nombreYApellido" class="form-control" id="inputNombre" placeholder="Nombre y Apellido" required>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="NombreYApellido?.errors && NombreYApellido?.touched">    
+                        <p *ngIf="NombreYApellido?.hasError('required')" class="error">
+                            El Nombre y Apellido es requerido.
+                        </p>
                     </div>
                     <div class="col-md-6">
                         <label for="inputTitulo" class="form-label">Titulo</label>
-                        <input type="text" class="form-control" id="inputTitulo" placeholder="Desarrollador Front, Back, otros" required>
+                        <input type="text" formControlName="titulo"  class="form-control" id="inputTitulo" placeholder="Desarrollador Front, Back, otros" required>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Titulo?.errors && Titulo?.touched">    
+                        <p *ngIf="Titulo?.hasError('required')" class="error">
+                            El Título es requerido.
+                        </p>
                     </div>
                     <div class="col-12">
                         <label for="inputUrl" class="form-label">URL</label>
-                        <input type="url" class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <input type="url" formControlName="urlImgPerfil"  class="form-control" id="inputUrl" placeholder="http://..." required>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="UrlImgPerfil?.errors && UrlImgPerfil?.touched">    
+                        <p *ngIf="UrlImgPerfil?.hasError('required')" class="error">
+                            El camino de la imágen de perfil es requerido.
+                        </p>
                     </div>
                     <div class="col-12">
                         <label for="inputDescripcion" class="form-label">Descripción</label>
                         <!-- <input type="text" class="form-control" id="inputDescripcion" placeholder="Descripción" required> -->
-                        <textarea class="form-control" name="" id="inputDescripcion" cols="30" rows="5" placeholder="Descripción" required></textarea>
+                        <textarea formControlName="descripcion" class="form-control" name="" id="inputDescripcion" cols="30" rows="5" placeholder="Descripción" required></textarea>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Descripcion?.errors && Descripcion?.touched">    
+                        <p *ngIf="Descripcion?.hasError('required')" class="error">
+                            La descripción es requerida.
+                        </p>
                     </div>
                     <div class="col-md-12 d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Grabar</button>
-                        <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Cancelar</button>
                     </div>
                 </form>
             </div>
