--- a/src/app/modales/modal-login/modal-login.component.html
+++ b/src/app/modales/modal-login/modal-login.component.html
@@ -7,14 +7,33 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body p-5 pt-0">
-                <form class="">
+                <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
+                        <input type="email" formControlName="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Email</label>
                     </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Mail?.errors && Mail?.touched">    
+                        <p *ngIf="Mail?.hasError('required')" class="error">
+                            El email es requerido.
+                        </p>
+                        <p *ngIf="Mail?.hasError('email')" class="error">
+                            El formato del email debe ser válido.
+                        </p>
+                    </div>
+
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                        <input type="password" formControlName="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
                         <label for="floatingPassword">Contraseña</label>
+                    </div>
+                    <!-- Gracias al getter que configuramos en el controlador -->
+                    <div *ngIf="Password?.errors && Password?.touched">
+                        <p *ngIf="Password?.hasError('required')" class="error">
+                            El password es requerido.
+                        </p>
+                        <p *ngIf="Password?.hasError('minlength')" class="error">
+                            El password debe ser de 8 o más caracteres.
+                        </p>
                     </div>
                     <button class="w-100 mb-2 btn btn-lg rounded-3 btn-outline-success" type="submit">Ingresar</button>
                     <hr class="my-4">
