--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,9 +1,19 @@
 <!-- Proyectos -->
 <section class="titulosSecciones">
     <div class="container-fluid colorFondo2">
-        <h4 class="pt-2 pb-2">Proyectos</h4>
+        <div class="row">
+            <div class="col-xs-12 col-sm-11 col-md-11 col-lg-11 pt-2">
+                <h4 class="pt-2 pb-2">Proyectos</h4>
+            </div>
+            <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
+                <button type="button" class="btn text-white colorBotonAlta" data-bs-toggle="modal" data-bs-target="#modalProyectosAdd">
+                    <i class="fa-regular fa-square-plus fa-xl"></i>
+                </button>
+            </div>
+        </div>
     </div>
-    <div class="container-fluid">
+
+    <div class="container-fluid mt-3">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let proyecto of proyectos">
                 <div class="card" style="width: 29rem;">
@@ -23,3 +33,4 @@
     </div>
 </section>
 <app-modal-proyecto></app-modal-proyecto>
+<app-modal-proyecto-add></app-modal-proyecto-add>
