--- a/src/app/modales/modal-proyecto-add/modal-proyecto-add.component.html
+++ b/src/app/modales/modal-proyecto-add/modal-proyecto-add.component.html
@@ -1,9 +1,9 @@
 <!-- Formulario Modal Proyectos -->
-<div class="modal fade" id="modalProyectos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="modalProyectosAdd" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
-                <h1 class="fw-bold mb-0 fs-2">Proyecto</h1>
+                <h1 class="fw-bold mb-0 fs-2">Agregar Proyecto</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body p-5 pt-0">
