Agregando las redes por Json

--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -11,39 +11,19 @@
     <!-- NavBar -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-1 mb-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="https://codepen.io/richarddf" target="_blank">
-                    <i class="fa-brands fa-codepen fa-xl text-white"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://github.com/richarddf" target="_blank">
-                    <i class="fa-brands fa-github fa-xl text-white"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://twitter.com/rich_df" target="_blank">
-                    <i class="fa-brands fa-twitter fa-xl text-white"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/richard-diaz-flores-62b02b1a/" target="_blank">
-                    <i class="fa-brands fa-linkedin fa-xl text-white"></i>
-                </a>
-            </li>
+            <app-redes class="navbar-nav me-auto mb-1 mb-lg-0"></app-redes>
             <li class="nav-item">
                 <!-- Button trigger modal - Boton para abrir login -->
                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modalLogin">
                     <i class="fa-solid fa-user-lock fa-xl text-white"></i>
                 </button>  
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <!-- Button trigger modal - Boton para cerrar sesión -->
                 <button type="button" class="btn">
                     <i class="fa-solid fa-right-from-bracket fa-xl text-white"></i>
                 </button>  
             </li>
-            
         </ul>
     </div>
 </nav>
