--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -29,7 +29,7 @@
                 </div>
                 <img [src]="habilidad.url" [alt]="alternativo+habilidad.tecnologia" class="tamañoLogo">
                 <div class="progress" style="height: 30px;">
-                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" [style.width]="habilidad.porcentaje" aria-valuenow="habilidad.porcentaje" aria-valuemin="0" aria-valuemax="100">{{habilidad.porcentaje}}</div>
+                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" [style.width.%]="habilidad.porcentaje" aria-valuenow="habilidad.porcentaje" aria-valuemin="0" aria-valuemax="100">{{habilidad.porcentaje}}%</div>
                 </div>
                 <p style="color:darkslateblue; font-size:small">{{habilidad.descripcion}}</p>
             </div>
