Agregado Entidad y Servicio Persona antes de sacar al archivo JSON como origen de  datos

--- a/src/app/componentes/acercade/acercade.component.html
+++ b/src/app/componentes/acercade/acercade.component.html
@@ -1,6 +1,6 @@
 <!-- Acerca de mi -->
 <section class="acercaDe mt-3 mb-3">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
                 <img [src]="imgPerfil" alt="Foto Perfil" class="circulo img-fluid">
