--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-3">
+    <div class="container mt-3">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let proyecto of proyectos">
                 <div class="card" style="width: 29rem;">
